--- a/www/css/main.css
+++ b/www/css/main.css
@@ -21,6 +21,14 @@ h2 {
   font-size: 2em;
 }
 
+h3 {
+  font-size: .9em;
+}
+
+h4 {
+  font-size: .4em;
+}
+
 .title {
   color: grey;
   font-family: 'Baloo Thambi', cursive;
@@ -55,12 +63,20 @@ h2 {
   float: left;
 }
 
+.right {
+  float: right;
+}
+
 .center {
   text-align: center;
 }
 
 .clear {
   clear: both;
+}
+
+.block {
+  display:block;
 }
 
 hr {
@@ -89,4 +105,150 @@ hr {
 
 .topicsVal {
   font-family: 'Baloo Thambi', cursive;
+}
+
+.opLan {
+  background-color: #a3bfa4;
+  color: #ffffff;
+  width: 5em;
+}
+
+.opLan:hover {
+  background-color: #2f5a31;
+  color: #ffffff;
+}
+
+.opLanSel {
+  background-color: #4caf50;
+  color: #ffffff;
+  width: 5em;
+}
+
+.minimg {
+  -webkit-border-radius: 50%;
+  border-radius: 50%;
+  -webkit-flex-shrink: 0;
+  flex-shrink: 0;
+  display: block;
+  height: 2em;
+  width: 2em;
+  margin-top: .5em;
+  margin-left: .5em;
+}
+
+.bckImg {
+  display: block;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  margin: 0;
+  height: 5em;
+  width: 10em;
+  border-top-left-radius: .3em;
+  border-top-right-radius: .3em;
+}
+
+#general {
+  border-style: solid;
+  border-color: #e6e5e5;
+  border-width: .01em;
+  width: 10em;
+  border-radius: .3em;
+}
+
+#dataPr {
+  padding: .5em;
+  background-color: #ffffff;
+  width: 3em;
+  height: 3em;
+}
+
+#dataDes {
+  background-color: #ffffff;
+  width: 6em;
+  height: 4em;
+}
+
+#dataDes1 {
+  background-color: #ffffff;
+  width: 6em;
+  height: 5em;
+}
+
+#descPr {
+  overflow-wrap: break-word;
+}
+
+#descPr1 {
+  overflow-wrap: break-word;
+  padding: 0;
+  margin: 0;
+}
+
+#namePr1 {
+  padding: 0;
+  margin:0;
+}
+
+#notifications {
+  width: 17em;
+  color: #9fabb7;
+  font-size: .6em;
+  padding-top: .8em;
+  padding-left: 1.1em;
+  padding-right: 1.1em;
+  padding-bottom: .2em;
+  margin: 0;
+  height: 1.3em;
+}
+
+.noti {
+  width: 5em;
+}
+
+.data {
+  font-family: 'Baloo Thambi', cursive !important;
+  color: #9fabb7 !important;
+}
+
+.fa-heart {
+  color:red !important;
+}
+
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    background-color: #f9f9f9;
+    text-align: left;
+}
+
+li {
+    display: block;
+    color: #000;
+    padding: .2em .1em;
+}
+
+li:hover {
+    background-color: #555;
+    color: orange !important;
+}
+
+li a:hover {
+    color: orange;
+}
+
+li:hover > a{
+  text-decoration: none;
+  color: orange;
+}
+
+li > a{
+  text-decoration: none;
+  color: black;
+}
+
+li .fa:hover {
+  color: orange;
 }
